--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 body{
     background-color: #EEEEEE;
     text-align: center;
+    font-family: 'Merriweather', serif;
 }
 .bottom-cloud, .top-cloud{
     position: absolute;
@@ -17,13 +18,16 @@ body{
     top:1.25rem;
     left:60vw;
 }
+.mountain-image{
+    width: 40%;
+}
 .top-container{
     margin-top: 20vh;
     
 }
 h1{
     font-family: 'Sacramento', cursive;
-    font-size:5rem; 
+    font-size:7vw; 
     line-height: 2;
    
 }
@@ -37,6 +41,22 @@ h2{
     font-family: 'Merienda', cursive;
     font-weight: normal;
 }
+
+@media screen and (max-width:500px) {
+    #caption{
+        font-size: 0.8em;
+    }
+    .top-cloud {
+        top: 8rem;
+        left: 75vw;
+        width: 4rem;
+    }
+    .bottom-cloud {
+        top: 35vh;
+        left: 12vw;
+        width: 4rem;
+      }
+}
 h1, h2{
     color: #66BFBF;
 
@@ -47,6 +67,11 @@ h3 {
 }
 .profile{
     margin:20px 0 30px 0;
+}
+.profile-paragraph{
+    width:30%;
+    margin:auto;
+    line-height: 2;
 }
 hr{
      width: 5rem;
@@ -77,7 +102,7 @@ hr{
     text-align: left;
     line-height: 2;
 }
-.btn:hover {
+/* .btn:hover {
     background-color: #781C68;
    cursor: pointer;
 }
@@ -88,7 +113,32 @@ hr{
     color: white;
     text-decoration: none;
     box-shadow: none;
-}
+} */
+.btn {
+    background: #4fbaf7;
+    background-image: -webkit-linear-gradient(top, #4fbaf7, #2e7dab);
+    background-image: -moz-linear-gradient(top, #4fbaf7, #2e7dab);
+    background-image: -ms-linear-gradient(top, #4fbaf7, #2e7dab);
+    background-image: -o-linear-gradient(top, #4fbaf7, #2e7dab);
+    background-image: linear-gradient(to bottom, #4fbaf7, #2e7dab);
+    -webkit-border-radius: 11;
+    -moz-border-radius: 11;
+    border-radius: 11px;
+    color: #ffffff;
+    font-size: 15px;
+    padding: 10px 15px 10px 15px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #30759c;
+    background-image: -webkit-linear-gradient(top, #30759c, #61b4e8);
+    background-image: -moz-linear-gradient(top, #30759c, #61b4e8);
+    background-image: -ms-linear-gradient(top, #30759c, #61b4e8);
+    background-image: -o-linear-gradient(top, #30759c, #61b4e8);
+    background-image: linear-gradient(to bottom, #30759c, #61b4e8);
+    text-decoration: none;
+  }
 .bottom-margin{
     margin: 0 auto 2.5rem;
 }
@@ -100,14 +150,16 @@ hr{
 .footer-link{
     margin: 0 2rem;
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1rem;
 }
 .footer-link:hover{
  color: white;
 }
-.footer-paragraph{
+.copyright{
     
     margin: 30px 0 0 0;
+    font-family: 'Source Sans Pro', sans-serif;
+    color: white;
 }
 a{
     color: #864879;
